--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,6 @@
     <title>HElllo</title>
 </head>
 <body>
-    <h1>hello coursera</h1>
+    <h1>hello coursera! nice to meet you  </h1>
 </body>
 </html>
